DemoMyApp/src/objects/xtma_Individual_Email_Result__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>Individual_Email_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>R00N30000001MXePEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Bounced__c</fullName>
        <label>Date Bounced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Unsubscribed__c</fullName>
        <label>Date Unsubscribed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>R00N30000001MXeWEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Total_Clicks__c</fullName>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unique_Clicks__c</fullName>
        <label>Number of Unique Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Individual Email Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date_Time_Sent__c</columns>
        <columns>Date_Bounced__c</columns>
        <columns>Lead__c</columns>
        <columns>Number_of_Total_Clicks__c</columns>
        <columns>Number_of_Unique_Clicks__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>Campaign__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Email Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>